Further role page layout changes

--- a/_layouts/role-index-designers.html
+++ b/_layouts/role-index-designers.html
@@ -3,66 +3,96 @@ layout: default-wrapper
 section_class: wide role-index
 ---
 
-<header class="page-header group">
-  <hgroup>
-    <h1{% if page.long-title %} class="long-title"{% endif %}>{{ page.title }}</h1>
-    {% if page.subtitle %}
-    <h2 class="subtitle">{{ page.subtitle }}</h2>
-    {% endif %}
-  </hgroup>
-</header>
+{% include _breadcrumbs.html %}
 
-{% assign hero = false %}
-{% for p in site.pages %}
-  {% if p.title == page.hero %}
-    {% assign hero = true %}
-  {% endif %}
-{% endfor %}
-
-<div class="article-container">
-  <div class="primary-links">
-    <div class="hero link-list">
-        <a href="https://www.gov.uk/designprinciples">
-          <h3>GOV.UK design principles</h3>
-          <p>Ten principles that should inform all you design for GOV.UK</p>
-        </a>
-    </div>
-
-
-    <div class="link-list wide">
-      <h3>Guides</h3>
-      <ul>
-      {% sorted_for p in site.pages sort_by:title %}
-        {% if p.audience.primary contains page.audience and (p.type == 'guide' or p.type == 'resource') and p.title != page.hero %}
-        <li> 
-            <a href="{{ p.url }}">{{ p.title }}</a>
-        </li>
-        {% endif %}
-      {% endsorted_for %}
-      </ul>
-    </div>
-
-  </div>
-
-
-  <div class="link-list more-guides">
-    <h3>More guides from the manual</h3>
-  
-    <ul>
-    {% sorted_for p in site.pages sort_by:title %}
-      {% if p.audience.secondary contains page.audience %}
-      <li> 
-          <a href="{{ p.url }}" title="{{ p.subtitle }}">{{ p.title }}</a>
-          <span class="subtitle">{{ p.subtitle }}</span>
-      </li>
+<article>
+  <header class="page-header group">
+    <hgroup>
+      <h1>{{ page.title }}</h1>
+      {% if page.subtitle %}
+      <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
-    {% endsorted_for %}
+    </hgroup>
+
+    {% include _meta-phases.html %}
+  </header>
+
+  <div class="role-section group">
+    <h2>Agile practice</h2>
+
+    <div class="description"><p>Services built to the standard use agile working methods to quickly build iterations of services. Read about some of the basics of agile, and how it works with user testing to refine designs.</p></div>
+
+    <ul class="link-list">
+      <li><a href="/service-manual/agile/what-agile-looks-like">What agile looks like</a></li>
+      <li><a href="/service-manual/agile/features-of-agile">Features of agile</a></li>
+      <li><a href="/service-manual/phases/">Service design phases</a></li>
+      <li><a href="/service-manual/design-and-content/working-with-prototypes">Working with prototypes</a></li>
+      <li><a href="/service-manual/users/introduction-to-user-research">An introduction to user research</a></li>
+      <li><a href="/service-manual/users/user-research">User research</a></li>
+      <li><a href="/service-manual/making-software/release-strategies">Releasing software</a></li>
+      <li><a href="/service-manual/communications/blogs">Blogging a service’s progress</a></li>
     </ul>
   </div>
 
-  <div class="role-links">
-    {% include _role-links.html %}
+  <div class="role-section group">
+    <h2>Users</h2>
+
+    <div class="description">
+      <p>You’ll be testing your designs with the users of your service on a frequent basis. This means using a lot of different techniques to get a variety of perspectives on the tools you’ve built.</p>
+    </div>
+
+    <ul class="link-list">
+      <li><a href="/service-manual/users/user-research/user-research-briefs.html">User research briefs</a></li>
+      <li><a href="/service-manual/agile/writing-user-stories">Writing user stories</a></li>
+      <li><a href="/service-manual/users/user-research/guerilla-testing">Guerilla testing</a></li>
+      <li><a href="/service-manual/users/user-research/discussion-guides">Discussion Guides</a></li>
+      <li><a href="/service-manual/users/user-research/lab-based-user-testing">Lab-based user testing</a></li>
+      <li><a href="/service-manual/users/user-research/sentiment-analysis">Sentiment analysis</a></li>
+      <li><a href="/service-manual/making-software/accessibility-testing">Accessibility testing</a></li>
+      <li><a href="/service-manual/users/user-research/multivariate-testing">A/B and multivariate experiments</a></li>
+      <li><a href="/service-manual/users/card-sorting">Card sorting</a></li>
+    </ul>
   </div>
 
-  <div class="all-guides"><strong><a href="/service-manual/browse">Browse all guides…</a></strong></div>
-</div>
+  <div class="role-section group">
+    <h2>What does good look like?</h2>
+
+    <div class="description">
+      <p>You’ll need to have a good understanding of your users and their needs before you start designing. Once you have that, you’re going to be building a highly accessible service that doesn’t exclude any citizens.</p>
+    </div>
+
+    <ul class="link-list">
+      <li><a href="/service-manual/users/user-needs">User needs</a></li>
+      <li><a href="/service-manual/users/user-research/ethnographic-research">Ethnographic research</a></li>
+      <li><a href="/service-manual/design-and-content/how-users-read">How users read</a></li>
+      <li><a href="/service-manual/design-and-content/designing-transactions">Designing transactions</a></li>
+      <li><a href="/service-manual/design-and-content/writing-government-services">Writing government services</a></li>
+      <li><a href="/service-manual/design-and-content/resources/writing-for-transactions">Writing for transactions</a></li>
+      <li><a href="/service-manual/design-and-content/accessibility">Accessibility</a></li>
+      <li><a href="/service-manual/assisted-digital">Assisted digital</a></li>
+      <li><a href="/service-manual/design-and-content/data-visualisation">Data visualisation</a></li>
+    </ul>
+  </div>
+
+  <div class="role-section group">
+    <h2>Patterns, templates and formats</h2>
+
+    <div class="description"><p>Digital by default services should be consistent, not uniform. That means understanding some of the conventions used across GOV.UK and how you can use them to meet your users’ needs.</p></div>
+
+    <ul class="link-list">
+      <li><a href="/service-manual/design-and-content/browsers-and-devices">Browsers and devices</a></li>
+      <li><a href="/service-manual/design-and-content/resources/colour-palettes">Colour palettes</a></li>
+      <li><a href="/design-and-content/resources/grids">Grids</a></li>
+      <li><a href="/service-manual/design-and-content/resources/buttons">Buttons</a></li>
+      <li><a href="/service-manual/design-and-content/choosing-appropriate-formats">Choosing appropriate formats</a></li>
+      <li><a href="/service-manual/design-and-content/resources/sass-repositories">Sass repositories</a></li>
+      <li><a href="/service-manual/design-and-content/print-forms">Print forms</a></li>
+      <li><a href="/service-manual/making-software/progressive-enhancement">Progressive enhancement</a></li>
+      <li><a href="/service-manual/making-software/logins">User accounts and logins</a></li>
+      <li><a href="/service-manual/design-and-content/resources/captcha">CAPTCHA</a></li>
+      <li><a href="/service-manual/design-and-content/resources/forms">Forms</a></li>
+      <li><a href="/service-manual/design-and-content/resources/shared-asset-libraries">Shared asset libraries</a></li>
+      <li><a href="/service-manual/design-and-content/resources/creating-accessible-PDFs">Creating accessible PDFs</a></li>
+    </ul>
+  </div>
+</article>
