--- a/service-manual/assets/stylesheets/helpers/_link-list.scss
+++ b/service-manual/assets/stylesheets/helpers/_link-list.scss
@@ -16,7 +16,7 @@
     font-size: 16px;
     list-style: none;
     overflow: hidden;
-    margin: 0.5em 0 0 0;
+    margin: 0 0 0.5em 0;
     padding: 0.5em 0 0 0;
     border-top: 1px solid $grey-3;
 
