--- a/_layouts/role-index-designers.html
+++ b/_layouts/role-index-designers.html
@@ -17,6 +17,30 @@ section_class: wide role-index
     {% include _meta-phases.html %}
   </header>
 
+  <ul class="hero group">
+    <li>
+      <a href="/designprinciples">
+        <h2>Design Principles</h2>
+
+        <p>The guiding principles at the heart of digital service design</p>
+      </a>
+    </li>
+    <li>
+      <a href="/service-manual/digital-by-default">
+        <h2>Digital by Default Service Standard</h2>
+
+        <p>The standards digital services must adhere to</p>
+      </a>
+    </li>
+    <li>
+      <a href="/service-manual/start">
+        <h2>Get started</h2>
+
+        <p>Start building digital by default services</p>
+      </a>
+    </li>
+  </ul>
+
   <div class="role-section group">
     <h2>Agile practice</h2>
 
