--- a/service-manual/assets/stylesheets/views/_role-index.scss
+++ b/service-manual/assets/stylesheets/views/_role-index.scss
@@ -125,13 +125,48 @@
     margin-bottom: 2em;
 
     @include media(tablet) {
-      
+
     }
   }
 
   .all-guides {
     @include core-19;
     margin-bottom: 2em;
+  }
+
+  .hero {
+    list-style: none;
+    margin: 0 2em 2em;
+    padding: 0;
+
+    li {
+      margin: 0;
+      padding: 0;
+      width: 33%;
+      float: left;
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+
+        text-decoration: none;
+
+        margin-left: 1em;
+      }
+
+      &:first-child a {
+        margin-left: 0;
+      }
+
+      h2 {
+        @include bold-36;
+      }
+
+      p {
+        color: $secondary-text-colour;
+      }
+    }
   }
 
   .role-section {
@@ -144,13 +179,17 @@
 
     h2 {
       @include bold-36;
-      margin: 1em 0 0.4em 0;
+      margin: 1em 0 0.6em 0;
     }
 
     .description {
       @include media(tablet) {
         width: 33%;
         float: left;
+      }
+
+      p {
+        margin: 0 0 0.75em 0;
       }
     }
 
