hgroup is no longer valid
The hgroup tag has been removed from the html 5 draft specification[1].

For the meantime we'll use a div with class of "hgroup", may refactor in the future.

[1] http://lists.w3.org/Archives/Public/public-html-admin/2013Apr/0003.html

--- a/_layouts/phases-index.html
+++ b/_layouts/phases-index.html
@@ -7,12 +7,12 @@ section_class: phases
 
 <article role="article" class="group">
   <header class="page-header group">
-    <hgroup>
+    <div class="hgroup">
       <h1>{{ page.title }}</h1>
       {% if page.subtitle %}
       <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
-    </hgroup>
+    </div>
   </header>
 
   <div class="article-container group">
