--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -5,12 +5,12 @@ section_class: browse
 
 <article role="article" class="group">
   <header class="page-header group">
-    <hgroup>
+    <div class="hgroup">
       <h1>{{ page.title }}</h1>
       {% if page.subtitle %}
       <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
-    </hgroup>
+    </div>
   </header>
 
   {{ content }}
