--- a/_layouts/category-index.html
+++ b/_layouts/category-index.html
@@ -6,12 +6,12 @@ section_class: category-index
 
 <article role="article" class="group">
   <header class="page-header group">
-    <hgroup>
+    <div class="hgroup">
       <h1>{{ page.title }}</h1>
       {% if page.subtitle %}
       <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
-    </hgroup>
+    </div>
 
     {% include _meta-phases.html %}
   </header>
