--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -36,7 +36,7 @@
                 <a href="/handbook/43/">Design patterns</a>
               </li>
             </div>
-        <hgroup><h1>{{ page.title }}</h1></hgroup></header><div class="article-container group">
+        <div class="hgroup"><h1>{{ page.title }}</h1></div></header><div class="article-container group">
         <article role="article" class="group">
           <div class="inner">
               {{ content }}
