--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -6,9 +6,9 @@ section_class: dbd
 
 <article role="article" class="group">
   <header class="page-header group">
-    <hgroup>
+    <div class="hgroup">
       <h1>{{ page.title }}</h1>
-    </hgroup>
+    </div>
   </header>
 
   <div class="article-container group">
