Clarify that search is scoped to the manual

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -11,7 +11,7 @@
 
       <form id="search" class="site-search" action="/service-manual/search" method="get">
           <div class="content">
-            <label for="site-search-text">Search</label>
+            <label for="site-search-text">Search the service manual</label>
             <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus" role="search">
             <input class="submit" type="submit" value="Search" />
           </div>
