Ensure consistent column sizing

--- a/_layouts/role-index-chief-technology-officers.html
+++ b/_layouts/role-index-chief-technology-officers.html
@@ -25,13 +25,13 @@ section_class: wide role-index
     </div>
 
     <ul class="link-list">
-      <li><a href="/service-manual/technology">Guidance for CTOs</a></li>
-      <li><a href="/service-manual/users/user-needs">User needs</a></li>
-      <li><a href="/service-manual/technology/culture-that-supports-change">Creating a culture that supports change</a></li>
-      <li><a href="/service-manual/technology/government-as-a-platform">Government as a platform</a></li>
-      <li><a href="/service-manual/technology/open-data">Open data</a></li>
-      <li><a href="/service-manual/technology/spending-controls">Spending controls</a></li>
-      <li><a href="/service-manual/technology/code-of-practice">Technology code of practice</a></li>
+      <li><span><a href="/service-manual/technology">Guidance for CTOs</a></span></li>
+      <li><span><a href="/service-manual/users/user-needs">User needs</a></span></li>
+      <li><span><a href="/service-manual/technology/culture-that-supports-change">Creating a culture that supports change</a></span></li>
+      <li><span><a href="/service-manual/technology/government-as-a-platform">Government as a platform</a></span></li>
+      <li><span><a href="/service-manual/technology/open-data">Open data</a></span></li>
+      <li><span><a href="/service-manual/technology/spending-controls">Spending controls</a></span></li>
+      <li><span><a href="/service-manual/technology/code-of-practice">Technology code of practice</a></span></li>
     </ul>
   </div>
 
@@ -41,13 +41,13 @@ section_class: wide role-index
     <div class="description"><p>You’ll need to have a full understanding of your ‘stack’ and make sure that it’s flexible enough to meet the needs of your users as the components within it change and develop over time.</p></div>
 
     <ul class="link-list">
-      <li><a href="/service-manual/technology/end-user-devices">End user devices</a></li>
-      <li><a href="/service-manual/making-software/choosing-technology">Choosing technology</a></li>
-      <li><a href="/service-manual/technology/architecture">Technology architecture</a></li>
-      <li><a href="/service-manual/technology/security-as-enabler">Security as enabler</a></li>
-      <li><a href="/service-manual/technology/service-integration">Service integration and management</a></li>
-      <li><a href="/service-manual/making-software/apis">APIs</a></li>
-      <li><a href="/service-manual/making-software/open-standards-and-licensing">Open standards and licensing</a></li>
+      <li><span><a href="/service-manual/technology/end-user-devices">End user devices</a></span></li>
+      <li><span><a href="/service-manual/making-software/choosing-technology">Choosing technology</a></span></li>
+      <li><span><a href="/service-manual/technology/architecture">Technology architecture</a></span></li>
+      <li><span><a href="/service-manual/technology/security-as-enabler">Security as enabler</a></span></li>
+      <li><span><a href="/service-manual/technology/service-integration">Service integration and management</a></span></li>
+      <li><span><a href="/service-manual/making-software/apis">APIs</a></span></li>
+      <li><span><a href="/service-manual/making-software/open-standards-and-licensing">Open standards and licensing</a></span></li>
     </ul>
   </div>
 </article>
