--- a/_layouts/role-index-designers.html
+++ b/_layouts/role-index-designers.html
@@ -47,14 +47,14 @@ section_class: wide role-index
     <div class="description"><p>Services built to the standard use agile working methods to quickly build iterations of services. Read about some of the basics of agile, and how it works with user testing to refine designs.</p></div>
 
     <ul class="link-list">
-      <li><a href="/service-manual/agile/what-agile-looks-like">What agile looks like</a></li>
-      <li><a href="/service-manual/agile/features-of-agile">Features of agile</a></li>
-      <li><a href="/service-manual/phases/">Service design phases</a></li>
-      <li><a href="/service-manual/design-and-content/working-with-prototypes">Working with prototypes</a></li>
-      <li><a href="/service-manual/users/introduction-to-user-research">An introduction to user research</a></li>
-      <li><a href="/service-manual/users/user-research">User research</a></li>
-      <li><a href="/service-manual/making-software/release-strategies">Releasing software</a></li>
-      <li><a href="/service-manual/communications/blogs">Blogging a service’s progress</a></li>
+      <li><span><a href="/service-manual/agile/what-agile-looks-like">What agile looks like</a></span></li>
+      <li><span><a href="/service-manual/agile/features-of-agile">Features of agile</a></span></li>
+      <li><span><a href="/service-manual/phases/">Service design phases</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/working-with-prototypes">Working with prototypes</a></span></li>
+      <li><span><a href="/service-manual/users/introduction-to-user-research">An introduction to user research</a></span></li>
+      <li><span><a href="/service-manual/users/user-research">User research</a></span></li>
+      <li><span><a href="/service-manual/making-software/release-strategies">Releasing software</a></span></li>
+      <li><span><a href="/service-manual/communications/blogs">Blogging a service’s progress</a></span></li>
     </ul>
   </div>
 
@@ -66,15 +66,15 @@ section_class: wide role-index
     </div>
 
     <ul class="link-list">
-      <li><a href="/service-manual/users/user-research/user-research-briefs.html">User research briefs</a></li>
-      <li><a href="/service-manual/agile/writing-user-stories">Writing user stories</a></li>
-      <li><a href="/service-manual/users/user-research/guerilla-testing">Guerilla testing</a></li>
-      <li><a href="/service-manual/users/user-research/discussion-guides">Discussion Guides</a></li>
-      <li><a href="/service-manual/users/user-research/lab-based-user-testing">Lab-based user testing</a></li>
-      <li><a href="/service-manual/users/user-research/sentiment-analysis">Sentiment analysis</a></li>
-      <li><a href="/service-manual/making-software/accessibility-testing">Accessibility testing</a></li>
-      <li><a href="/service-manual/users/user-research/multivariate-testing">A/B and multivariate experiments</a></li>
-      <li><a href="/service-manual/users/card-sorting">Card sorting</a></li>
+      <li><span><a href="/service-manual/users/user-research/user-research-briefs.html">User research briefs</a></span></li>
+      <li><span><a href="/service-manual/agile/writing-user-stories">Writing user stories</a></span></li>
+      <li><span><a href="/service-manual/users/user-research/guerilla-testing">Guerilla testing</a></span></li>
+      <li><span><a href="/service-manual/users/user-research/discussion-guides">Discussion Guides</a></span></li>
+      <li><span><a href="/service-manual/users/user-research/lab-based-user-testing">Lab-based user testing</a></span></li>
+      <li><span><a href="/service-manual/users/user-research/sentiment-analysis">Sentiment analysis</a></span></li>
+      <li><span><a href="/service-manual/making-software/accessibility-testing">Accessibility testing</a></span></li>
+      <li><span><a href="/service-manual/users/user-research/multivariate-testing">A/B and multivariate experiments</a></span></li>
+      <li><span><a href="/service-manual/users/card-sorting">Card sorting</a></span></li>
     </ul>
   </div>
 
@@ -86,15 +86,15 @@ section_class: wide role-index
     </div>
 
     <ul class="link-list">
-      <li><a href="/service-manual/users/user-needs">User needs</a></li>
-      <li><a href="/service-manual/users/user-research/ethnographic-research">Ethnographic research</a></li>
-      <li><a href="/service-manual/design-and-content/how-users-read">How users read</a></li>
-      <li><a href="/service-manual/design-and-content/designing-transactions">Designing transactions</a></li>
-      <li><a href="/service-manual/design-and-content/writing-government-services">Writing government services</a></li>
-      <li><a href="/service-manual/design-and-content/resources/writing-for-transactions">Writing for transactions</a></li>
-      <li><a href="/service-manual/design-and-content/accessibility">Accessibility</a></li>
-      <li><a href="/service-manual/assisted-digital">Assisted digital</a></li>
-      <li><a href="/service-manual/design-and-content/data-visualisation">Data visualisation</a></li>
+      <li><span><a href="/service-manual/users/user-needs">User needs</a></span></li>
+      <li><span><a href="/service-manual/users/user-research/ethnographic-research">Ethnographic research</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/how-users-read">How users read</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/designing-transactions">Designing transactions</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/writing-government-services">Writing government services</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/writing-for-transactions">Writing for transactions</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/accessibility">Accessibility</a></span></li>
+      <li><span><a href="/service-manual/assisted-digital">Assisted digital</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/data-visualisation">Data visualisation</a></span></li>
     </ul>
   </div>
 
@@ -104,19 +104,19 @@ section_class: wide role-index
     <div class="description"><p>Digital by default services should be consistent, not uniform. That means understanding some of the conventions used across GOV.UK and how you can use them to meet your users’ needs.</p></div>
 
     <ul class="link-list">
-      <li><a href="/service-manual/design-and-content/browsers-and-devices">Browsers and devices</a></li>
-      <li><a href="/service-manual/design-and-content/resources/colour-palettes">Colour palettes</a></li>
-      <li><a href="/design-and-content/resources/grids">Grids</a></li>
-      <li><a href="/service-manual/design-and-content/resources/buttons">Buttons</a></li>
-      <li><a href="/service-manual/design-and-content/choosing-appropriate-formats">Choosing appropriate formats</a></li>
-      <li><a href="/service-manual/design-and-content/resources/sass-repositories">Sass repositories</a></li>
-      <li><a href="/service-manual/design-and-content/print-forms">Print forms</a></li>
-      <li><a href="/service-manual/making-software/progressive-enhancement">Progressive enhancement</a></li>
-      <li><a href="/service-manual/making-software/logins">User accounts and logins</a></li>
-      <li><a href="/service-manual/design-and-content/resources/captcha">CAPTCHA</a></li>
-      <li><a href="/service-manual/design-and-content/resources/forms">Forms</a></li>
-      <li><a href="/service-manual/design-and-content/resources/shared-asset-libraries">Shared asset libraries</a></li>
-      <li><a href="/service-manual/design-and-content/resources/creating-accessible-PDFs">Creating accessible PDFs</a></li>
+      <li><span><a href="/service-manual/design-and-content/browsers-and-devices">Browsers and devices</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/colour-palettes">Colour palettes</a></span></li>
+      <li><span><a href="/design-and-content/resources/grids">Grids</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/buttons">Buttons</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/choosing-appropriate-formats">Choosing appropriate formats</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/sass-repositories">Sass repositories</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/print-forms">Print forms</a></span></li>
+      <li><span><a href="/service-manual/making-software/progressive-enhancement">Progressive enhancement</a></span></li>
+      <li><span><a href="/service-manual/making-software/logins">User accounts and logins</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/captcha">CAPTCHA</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/forms">Forms</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/shared-asset-libraries">Shared asset libraries</a></span></li>
+      <li><span><a href="/service-manual/design-and-content/resources/creating-accessible-PDFs">Creating accessible PDFs</a></span></li>
     </ul>
   </div>
 </article>
