Split out hero links into include file

--- a/_layouts/role-index-chief-technology-officers.html
+++ b/_layouts/role-index-chief-technology-officers.html
@@ -17,6 +17,8 @@ section_class: wide role-index
     {% include _meta-phases.html %}
   </header>
 
+  {% include _role-heros.html %}
+
   <div class="role-section group">
     <h2>Transforming IT culture</h2>
 
