--- a/service-manual/assets/stylesheets/views/_role-index.scss
+++ b/service-manual/assets/stylesheets/views/_role-index.scss
@@ -136,27 +136,41 @@
 
   .hero {
     list-style: none;
-    margin: 0 2em 2em;
+    margin: 0 1em 2em;
     padding: 0;
+
+    @include media(tablet) {
+      margin: 0 2em 2em;
+    }
 
     li {
       margin: 0;
       padding: 0;
-      width: 33%;
-      float: left;
+
+      @include media(tablet) {
+        width: (100%/3);
+        float: left;
+      }
 
       a {
         display: block;
-        width: 100%;
         height: 100%;
 
         text-decoration: none;
-
-        margin-left: 1em;
       }
 
-      &:first-child a {
-        margin-left: 0;
+      @include media(tablet) {
+        a {
+          margin: 0 $gutter-one-third;
+        }
+
+        &:first-child a {
+          margin: 0 $gutter-two-thirds 0 0;
+        }
+
+        &:last-child a {
+          margin: 0 0 0 $gutter-two-thirds;
+        }
       }
 
       h2 {
@@ -184,7 +198,7 @@
 
     .description {
       @include media(tablet) {
-        width: 33%;
+        width: (100%/3);
         float: left;
       }
 
