--- a/_includes/stylesheets/whitehall/_colours.scss
+++ b/_includes/stylesheets/whitehall/_colours.scss
@@ -39,7 +39,7 @@ $info-background-hover: darken($panel-colour, 5%);
 
 @mixin department-colours($selector, $property) {
   .hm-government #{$selector} { #{$property}: $hm-government; }
-  .treasury #{$selector} { #{$property}: $treasury; }
+  .treasury #{$selector} { #{$property}: $hm-treasury; }
   .cabinet-office #{$selector} { #{$property}: $cabinet-office; }
   .department-for-education #{$selector} { #{$property}: $department-for-education; }
   .department-for-transport #{$selector} { #{$property}: $department-for-transport; }
@@ -47,13 +47,13 @@ $info-background-hover: darken($panel-colour, 5%);
   .department-of-health #{$selector} { #{$property}: $department-of-health; }
   .ministry-of-justice #{$selector} { #{$property}: $ministry-of-justice; }
   .ministry-of-defence #{$selector} { #{$property}: $ministry-of-defence; }
-  .foreign-and-commonwealth-office #{$selector} { #{$property}: $foreign-and-commonwealth-office; }
+  .foreign-and-commonwealth-office #{$selector} { #{$property}: $foreign-commonwealth-office; }
   .department-for-communities-and-local-government #{$selector} { #{$property}: $department-for-communities-and-local-government; }
   .department-for-energy-and-climate-change #{$selector} { #{$property}: $department-of-energy-climate-change; }
   .department-for-culture-media-and-sport #{$selector} { #{$property}: $department-for-culture-media-and-sport; }
-  .department-for-environment-food-and-rural-affairs #{$selector} { #{$property}: $department-for-environment-food-and-rural-affairs; }
-  .department-for-work-and-pensions #{$selector} { #{$property}: $department-for-work-and-pensions; }
-  .department-for-business-innovation-and-skills #{$selector} { #{$property}: $department-for-business-innovation-and-skills; }
+  .department-for-environment-food-and-rural-affairs #{$selector} { #{$property}: $department-for-environment-food-rural-affairs; }
+  .department-for-work-and-pensions #{$selector} { #{$property}: $department-for-work-pensions; }
+  .department-for-business-innovation-and-skills #{$selector} { #{$property}: $department-for-business-innovation-skills; }
   .department-for-international-development #{$selector} { #{$property}: $department-for-international-development; }
   .government-equalities-office #{$selector} { #{$property}: $government-equalities-office; }
   .attorney-generals-office #{$selector} { #{$property}: $attorney-generals-office; }
