Add the main tag to all pages

--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -12,11 +12,11 @@
 
   <div id="wrapper">
 
-    <section id="content" role="main" class="group">
+    <main id="content" role="main" class="group">
 
       {{ content }}
 
-    </section>
+    </main>
   </div><!--end wrapper-->
 
   {% include _footer.html %}
