--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -13,7 +13,7 @@
 
     <div id="wrapper" class="{{ page.categories }}{% if page.section_class  %} {{ page.section_class }}{% endif %}">
 
-      <section id="content" role="main" class="group">
+      <main id="content" role="main" class="group">
 
         <div class="js-toggle-nav" id="global-nav">
           <div class="inner">
@@ -43,7 +43,7 @@
             </div>
             </article>
           </div>
-      </section>
+      </main>
     </div><!--end wrapper-->
     {% include _footer.html %}
     {% include _scripts.html %}
