Track text on GOV.UK

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,7 +1,7 @@
 <footer class="group js-footer" id="footer" role="contentinfo">
   <div class="footer-wrapper">
     <nav class="footer-categories"><div class="footer-explore">
-      <h2>Services and Information</h2>
+      <h2>Services and information</h2>
 
       <ul>
         <li><a href="/browse/driving">Driving and transport</a></li>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="footer-inside-government">
-      <h2><a href="/government">Departments and Policy</a></h2>
+      <h2><a href="/government">Departments and policy</a></h2>
 
       <ul>
         <li><a href="/government/how-government-works">How government works</a></li>
