--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="footer-inside-government">
-      <h2><a href="/government">Departments and policy</a></h2>
+      <h2>Departments and policy</h2>
 
       <ul>
         <li><a href="/government/how-government-works">How government works</a></li>
