Switch to using jekyll-assets to include assets
This commit uses the jekyll-assets gem to generate nice asset paths
that are cachebusted properly.

Rename all the JavaScript and Stylesheets to put them in the _assets
directory. Put the toolkit submodule there too.

Remove the CSS check from the compile script. Compilation definitely
fails now if the Sass doesn't compile, as I discovered when it failed
because we have a stray image-url() in _typography.scss (removed).

Use the provided liquid tags to include the CSS and JS in the HTML
document.

--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -1,7 +1,7 @@
 <script src="https://assets.digital.cabinet-office.gov.uk/static/libs/jquery/jquery-1.7.2-2ce4706f8f7193defaa9e7df2b641e9a.js" type="text/javascript"></script>
 <script src="https://assets.digital.cabinet-office.gov.uk/static/application-16a0e5d6d1ce6bd26e15682116fda736.js" type="text/javascript"></script>
 
-<script src="/service-manual/assets/javascript/toggler.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
-<script src="/service-manual/assets/javascript/media-player-loader.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
+{% javascript toggler %}
+{% javascript media-player-loader %}
 
 {% include _analytics.html %}
