Add user satisfaction survey bar
For gathering data about moving the Service Manual to Whitehall.

https://www.pivotaltracker.com/story/show/60397410

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -46,6 +46,7 @@
 @import "helpers/_role-links.scss";
 @import "helpers/_tables.scss";
 @import "helpers/_tooltip.scss";
+@import "helpers/_user-satisfaction-survey";
 @import "helpers/_inline-images.scss";
 
 // Views
