--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -10,6 +10,13 @@
 
   {% include _header.html %}
 
+  <section id="user-satisfaction-survey" class="visible">
+    <div class="wrapper">
+      <h1>Tell us what you think</h1>
+      <p><a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">Take the 3 minute survey</a> This will open a short survey on another website</p>
+    </div>
+  </section>
+
   <div id="wrapper">
 
     <main id="content" role="main" class="group">
