--- a/service-manual/assets/stylesheets/helpers/_typography.scss
+++ b/service-manual/assets/stylesheets/helpers/_typography.scss
@@ -186,6 +186,7 @@ article ul, article ol {
 */
 article ul {
   list-style-type: circle;
+  list-style-image: image-url("bullet-disc-5px.gif");
 }
 
 article ol {
