Link to new section

--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -1,6 +1,7 @@
 <h3>Guides and resources for…</h3>
 <ul class="roles">
   <li><a href="/service-manual/service-managers">Service managers</a></li>
+  <li><a href="/service-manual/content-designers">Content designers</a></li>
   <li><a href="/service-manual/designers">Designers</a></li>
   <li><a href="/service-manual/developers">Developers</a></li>
   <li><a href="/service-manual/user-researchers">User researchers</a></li>
