--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -13,7 +13,7 @@
   <section id="user-satisfaction-survey" class="visible">
     <div class="wrapper">
       <h1>Tell us what you think</h1>
-      <p><a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">Take the 3 minute survey</a> This will open a short survey on another website</p>
+      <p><a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">Take the 3 minute survey</a>. This will open a short survey on another website</p>
     </div>
   </section>
 
