Fix page.title when using govuk_template
govuk_template only allows us to include page.title in the title tag,
where we also want a suffix to indicate that this is the Service Manual.

However, we also make use of page.title inside h1 tags.

This commit adds a plugin that sets the title to include the pretty suffix,
sets an attribute on the data that doesn't include the suffix and then converts
all of the Service Manual specific layouts to use the new un-suffixed title.

--- a/_layouts/phases-index.html
+++ b/_layouts/phases-index.html
@@ -8,7 +8,7 @@ section_class: phases
 <article role="article" class="group">
   <header class="page-header group">
     <div class="hgroup">
-      <h1>{{ page.title }}</h1>
+      <h1>{{ page.title_without_suffix }}</h1>
       {% if page.subtitle %}
       <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
