--- a/_layouts/role-index-content-designer.html
+++ b/_layouts/role-index-content-designer.html
@@ -5,7 +5,7 @@ section_class: wide role-index
 
 <header class="page-header group">
   <div class="hgroup">
-    <h1{% if page.long-title %} class="long-title"{% endif %}>{{ page.title }}</h1>
+    <h1{% if page.long-title %} class="long-title"{% endif %}>{{ page.title_without_suffix }}</h1>
     {% if page.subtitle %}
     <h2 class="subtitle">{{ page.subtitle }}</h2>
     {% endif %}
