--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -7,7 +7,7 @@ section_class: dbd
 <article role="article" class="group">
   <header class="page-header group">
     <div class="hgroup">
-      <h1>{{ page.title }}</h1>
+      <h1>{{ page.title_without_suffix }}</h1>
     </div>
   </header>
 
