Use new liquid template to fix page titles
As part of the move to use govuk_template the titles were broken. This
uses a new version of the liquid template so that the title can be
defined in the project.

--- a/_layouts/govuk_template.html
+++ b/_layouts/govuk_template.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <title>{% if page.title %}{{ page.title }}{% endif %}</title>
+    <title>{% include layouts/_page_title.html %}</title>
 
     <script type="text/javascript">
       (function(){if(navigator.userAgent.match(/IEMobile\/10\.0/)){var d=document,c="appendChild",a=d.createElement("style");a[c](d.createTextNode("@-ms-viewport{width:auto!important}"));d.getElementsByTagName("head")[0][c](a);}})();
