--- a/_includes/layouts/_body.html
+++ b/_includes/layouts/_body.html
@@ -1,3 +1,4 @@
+<script src="/service-manual/assets/javascript/jquery-1.7.2.js" type="text/javascript"></script>
 <script src="/service-manual/assets/javascript/toggler.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
 <script src="/service-manual/assets/javascript/media-player-loader.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
 
